Fixing z-index

--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@
    font-family: var(--main-font-family);
    position: sticky;
    top:0;
-   z-index: 99;
+   z-index: 999;
    background-color: var(--main-brand-color);
    display: flex;
    justify-content: space-between;
