--- a/styles/progress.bar.css
+++ b/styles/progress.bar.css
@@ -4,7 +4,7 @@
     border-radius: 210px;
     width: 0;
     position: relative;
-    z-index: 999;
+    z-index: 929;
     margin: 1rem  0 ;
    
   
